IOT-98 minor adjustments

--- a/src/app/views/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/views/datatarget/datatarget-list/datatarget-list.component.html
@@ -4,7 +4,7 @@
       [sort]="sort" 
       [(selectedSortId)]="selectedSortId" 
       [pageLimit]="pageLimit"
-      [title]="'NAV.DATATARGET' | translate" 
+      [title]="title" 
       [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate"
       [ctaRouterLink]="'datatarget-edit'" 
       (updatePageLimit)="updatePageLimit($event)"
