--- a/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.html
+++ b/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="form-group mt-3 col-12">
-      <select id="applicationId" class="form-select" name="applicationId" [(ngModel)]="iotDevice.applicationId" required
+      <select id="applicationId" class="form-select" name="applicationId" [(ngModel)]="iotDevice.applicationId" required [disabled]="disableChoseApplication"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('applicationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('applicationId')}">
         <option *ngFor="let app of applications" [value]="app.id">{{app.name}}</option>
       </select>
