adding profiles, refactor services & Navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,6 +28,12 @@
           {{ 'NAV.ALL-IOT-DEVICES' | translate }}
         </a>
       </li>
+      <li class="nav-item py-2">
+        <a routerLink="/profiles" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+          id="profiles">
+          {{ 'NAV.ALL-IOT-DEVICES' | translate }}
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
