--- a/src/app/views/administration-gateway/gateway/gateway.component.html
+++ b/src/app/views/administration-gateway/gateway/gateway.component.html
@@ -21,7 +21,7 @@
           <p>{{gateway.location.longitude}}</p>
         </div>
         <div class="col-12 pt-2 col-sm-8">
-          <p>{{gateway.tags}}</p>
+          <p>{{gateway.tagsString}}</p>
         </div>
       </div>
     </div>
