--- a/src/app/views/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/views/datatarget/datatarget-list/datatarget-list.component.html
@@ -8,6 +8,7 @@
       [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate"
       [ctaRouterLink]="'datatarget-edit'" 
       (updatePageLimit)="updatePageLimit($event)"
+      [backButtonTitle]="'Tilbage'"
       (selectedSortChange)="changeSort($event)"></app-top-bar>
   </div>
   <div class="row">
