--- a/src/app/shared/form/form-header/form-header.component.html
+++ b/src/app/shared/form/form-header/form-header.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col forms-header d-flex">
-    <a [routerLink]="backButton.routerLink" routerLinkActive="active" class="back-button">{{backButton.label}}</a>
+    <a (click)="routeBack()" [routerLink]="" class="back-button">{{backButton.label}}</a>
     <div class="form-title">{{title}}</div>
   </div>
 </div>
