IOT-98 QA changes

--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -65,3 +65,15 @@
     border-color: $black;
     color: $black;
 }
+
+.back-button {
+    text-decoration: none;
+    padding-left: 1.5rem;
+    padding-right: 1rem;
+    border-right: $grey-border solid 1px;
+    color: $orange;
+    background-position: 0 27px;
+    background-repeat: no-repeat;
+    background-size: 8px;
+    background-image: url("data:image/svg+xml,%3Csvg width='8' height='12' viewBox='0 0 8 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.07422 5.40625C0.859375 5.62109 0.859375 5.92188 1.07422 6.13672L6.10156 11.1211C6.31641 11.3359 6.66016 11.3359 6.83203 11.1211L7.13281 10.8203C7.34766 10.6055 7.34766 10.3047 7.13281 10.0898L2.75 5.75L7.17578 1.45312C7.34766 1.23828 7.34766 0.9375 7.17578 0.722656L6.83203 0.421875C6.66016 0.207031 6.31641 0.207031 6.10156 0.421875L1.07422 5.40625Z' fill='%23E76659'/%3E%3C/svg%3E%0A");
+}
