Service profiles with ngrx

--- a/src/app/my-applications/applications-table/applications-table.component.html
+++ b/src/app/my-applications/applications-table/applications-table.component.html
@@ -7,8 +7,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let application of applications" class="py-3"
-      app-applications-table-row [application]="application" (deleteApplication)="deleteApplication($event)">
+    <tr *ngFor="let application of applications" class="py-3" app-applications-table-row [application]="application"
+      (deleteApplication)="deleteApplication($event)">
     </tr>
   </tbody>
 </table>
@@ -16,7 +16,9 @@
 <nav *ngIf="pageTotal > 1" [attr.aria-label]="'TABLE.PAGINATION' | translate">
   <ul class="pagination justify-content-center mt-5">
     <li class="page-item"><a class="page-link" [routerLink]="" (click)="prevPage()">Previous</a></li>
-    <li class="page-item disabled"><div class="page-link" [routerLink]="">{{ pageOffset + 1 }} / {{ pageTotal }}</div></li>
+    <li class="page-item disabled">
+      <div class="page-link" [routerLink]="">{{ pageOffset + 1 }} / {{ pageTotal }}</div>
+    </li>
     <li class="page-item"><a class="page-link" [routerLink]="" (click)="nextPage()">Next</a></li>
   </ul>
 </nav>
