--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -1,1 +1,11 @@
-<p>profiles works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <app-service-profiles-list></app-service-profiles-list>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-xs-12">
+
+    </div>
+</div>
