--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,15 +23,15 @@
         </a>
       </li>
       <li class="nav-item py-2">
-        <a routerLink="/alle-iot-enheder" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
-          id="allIoTDevices">
+        <a routerLink="/iot-devices" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+          id="IoTDevices">
           {{ 'NAV.ALL-IOT-DEVICES' | translate }}
         </a>
       </li>
       <li class="nav-item py-2">
         <a routerLink="/profiles" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
           id="profiles">
-          {{ 'NAV.ALL-IOT-DEVICES' | translate }}
+          Profiles
         </a>
       </li>
     </ul>
