--- a/src/app/shared/form/form-body-lora-gateway/form-body-lora-gateway.component.html
+++ b/src/app/shared/form/form-body-lora-gateway/form-body-lora-gateway.component.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="form-group mt-3">
-      <label class="form-label" for="id">{{'QUESTION-LORA-GATEWAY.GATEWAYID' | translate}}</label>
+      <label class="form-label" for="id">{{'QUESTION-LORA-GATEWAY.GATEWAYID' | translate}}</label>*
         <input 
         type="text" 
         class="form-control" 
@@ -50,7 +50,7 @@
 
     <div class="row mb-5">
       <div class="form-group mt-3 col-6">
-        <label class="form-label" for="longitude">{{'GATEWAY.LONGITUDE' | translate}}</label>*
+        <label class="form-label" for="longitude">{{'GATEWAY.LONGITUDE' | translate}}</label>
         <input 
           type="number" 
           class="form-control" 
@@ -68,7 +68,7 @@
       </div>
   
       <div class="form-group mt-3 col-6">
-        <label class="form-label" for="latitude">{{'GATEWAY.LATITUDE' | translate}}</label>*
+        <label class="form-label" for="latitude">{{'GATEWAY.LATITUDE' | translate}}</label>
         <input 
           type="number" 
           class="form-control" 
@@ -86,7 +86,7 @@
       </div>
   
       <div class="form-group mt-3 col-6">
-        <label class="form-label" for="altitude">{{'GATEWAY.ALTITUDE' | translate}}</label>*
+        <label class="form-label" for="altitude">{{'GATEWAY.ALTITUDE' | translate}}</label>
         <input 
           type="number" 
           class="form-control" 
@@ -104,7 +104,7 @@
       </div>
     </div>
     <div class="form-group mt-3">
-      <label class="form-label" for="tagsString">{{'QUESTION-LORA-GATEWAY.METADATA' | translate}}</label>*
+      <label class="form-label" for="tagsString">{{'QUESTION-LORA-GATEWAY.METADATA' | translate}}</label>
       <input 
         type="text" 
         class="form-control" 
