--- a/src/app/profiles/service-profiles/service-profiles-list/service-profiles-list.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-list/service-profiles-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <!-- <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button> -->
+        <button class="btn btn-success" (click)="onNewServiceProfile()">New Service Profile</button>
         <button class="btn btn-success">Test</button>
     </div>
 </div>
