--- a/src/app/profiles/service-profiles/service-profiles-list/service-profiles-list.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-list/service-profiles-list.component.html
@@ -1,7 +1,9 @@
-<div class="row">
-    <div class="col-xs-12">
-        <button class="btn btn-success" (click)="onNewServiceProfile()">New Service Profile</button>
-        <button class="btn btn-success">Test</button>
+<div class="row mt-5">
+    <div class="col-6">
+        <h4>Service Profiles</h4>
+    </div>
+    <div class="col-6">
+        <button class="btn btn-primary float-right" (click)="onNewServiceProfile()">New Service Profile</button>
     </div>
 </div>
 <hr>
