--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -1,11 +1,3 @@
-<div class="row">
-    <div class="col-xs-12">
-        <app-service-profiles-list></app-service-profiles-list>
-    </div>
-</div>
-<hr>
-<div class="row">
-    <div class="col-xs-12">
-
-    </div>
+<div class="px-5 py-4">
+    <router-outlet></router-outlet>
 </div>
