--- a/src/app/profiles/service-profiles/service-profiles-list/service-profile-item/service-profile-item.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-list/service-profile-item/service-profile-item.component.html
@@ -1,5 +1,12 @@
-<a style="cursor: pointer;" [routerLink]="[index]" routerLinkActive="active" class="list-group-item clearfix">
-  <div class="pull-left">
-    <h4 class="list-group-item-heading">{{ serviceProfile.name }}</h4>
+<div class=" list-group-item clearfix" routerLinkActive="active">
+  <div class="row">
+    <div class="col-6 pull-left"> <a [routerLink]="[index]">
+        <h4 class="application-link">{{ serviceProfile.name }}</h4>
+      </a></div>
+    <div class="col-6 text-right application-link">
+      <!-- TODO: skal skiftes ud med Ikoner -->
+      <a style="cursor: pointer;" (click)="onEditServiceProfile()">Edit ServiceProfile</a>
+      <a style="cursor: pointer;" class="pl-3" (click)="onDeleteServiceProfile()">Delete ServiceProfile</a>
+    </div>
   </div>
-</a>
+</div>
