fIX af htpp request

--- a/src/app/profiles/service-profiles/service-profiles-detail/service-profiles-detail.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-detail/service-profiles-detail.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="col-12 py-4">
         <div class="col-12 col-sm-4">
-            <h4>{{ 'IOTDEVICE.NAME'  }}</h4>
+            <h4>{{ 'IOTDEVICE.NAME' | translate }}</h4>
         </div>
         <div class="col-12 pt-2 col-sm-8">
             <p>{{serviceProfile.name}}</p>
