--- a/src/app/profiles/service-profiles/service-profiles-detail/service-profiles-detail.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-detail/service-profiles-detail.component.html
@@ -8,18 +8,21 @@
         <div class="col-xs-12">
             <div class="btn-group float-right" appDropdown>
                 <button type="button" class="btn btn-primary dropdown-toggle">
-                    Manage ServiceProfile <span class="caret"></span>
+                    {{'PROFILES.SERVICE_PROFILE.DROPDOWN' | translate}} <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a style="cursor: pointer;" (click)="onEditServiceProfile()">Edit ServiceProfile</a></li>
-                    <li><a style="cursor: pointer;" (click)="onDeleteServiceProfile()">Delete ServiceProfile</a></li>
+                    <li><a style="cursor: pointer;"
+                            (click)="onEditServiceProfile()">{{'PROFILES.SERVICE_PROFILE.EDIT' | translate}}</a></li>
+                    <li><a style="cursor: pointer;"
+                            (click)="onDeleteServiceProfile()">{{'PROFILES.SERVICE_PROFILE.DELETE' | translate}}</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="col-12 py-4">
         <div class="col-12 col-sm-4">
-            <h4>{{ 'IOTDEVICE.NAME' | translate }}</h4>
+            <h4>{{'PROFILES.SERVICE_PROFILE.NAME' | translate}}</h4>
         </div>
         <div class="col-12 pt-2 col-sm-8">
             <p>{{serviceProfile.name}}</p>
@@ -27,23 +30,42 @@
     </div>
     <div class="col-12 py-4">
         <div class="col-12 col-sm-4">
-            <h4>{{ 'IOTDEVICE.TYPE'  }}</h4>
+            <h4>{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYSTATUS' | translate}}</h4>
         </div>
         <div class="col-12 pt-2 col-sm-8">
-            <p>{{ 'IOT-DEVICE-TYPES.' + serviceProfile.drMin }}</p>
+            <p>{{serviceProfile.reportDevStatusBattery}}</p>
         </div>
     </div>
-    {{ serviceProfile.addGWMetaData }}
-    {{ serviceProfile.drMin }}
-    {{ serviceProfile.drMax }}
-    {{ serviceProfile.targetPER }}
-
-
-    <div class="row">
-        <div class="col-xs-12">
-            <ul class="list-group">
-
-            </ul>
+    <div class="col-12 py-4">
+        <div class="col-12 col-sm-4">
+            <h4>{{'PROFILES.SERVICE_PROFILE.ADDGWMETADATA' | translate}}</h4>
+        </div>
+        <div class="col-12 pt-2 col-sm-8">
+            <p>{{ serviceProfile.addGWMetaData }}</p>
+        </div>
+    </div>
+    <div class="col-12 py-4">
+        <div class="col-12 col-sm-4">
+            <h4>{{'PROFILES.SERVICE_PROFILE.DRRATEMIN' | translate}}</h4>
+        </div>
+        <div class="col-12 pt-2 col-sm-8">
+            <p>{{ serviceProfile.drMin }}</p>
+        </div>
+    </div>
+    <div class="col-12 py-4">
+        <div class="col-12 col-sm-4">
+            <h4>{{'PROFILES.SERVICE_PROFILE.DRRATEMAX' | translate}}</h4>
+        </div>
+        <div class="col-12 pt-2 col-sm-8">
+            <p>{{ serviceProfile.drMax}}</p>
+        </div>
+    </div>
+    <div class="col-12 py-4">
+        <div class="col-12 col-sm-4">
+            <h4>{{'PROFILES.SERVICE_PROFILE.REPORT_END_DEVICE' | translate}}</h4>
+        </div>
+        <div class="col-12 pt-2 col-sm-8">
+            <p>{{ serviceProfile.targetPER }}</p>
         </div>
     </div>
 </div>
