--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
@@ -31,18 +30,18 @@ $OS2IoT-frontend-theme: mat-light-theme($OS2IoT-frontend-primary, $OS2IoT-fronte
 
 // Fonts
 @font-face {
-    font-family: 'roboto-light';
-    src: url('./assets/fonts/Roboto-Light.ttf') format('truetype');
+  font-family: 'roboto-light';
+  src: url('./assets/fonts/Roboto-Light.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'roboto';
-    src: url('./assets/fonts/Roboto-Regular.ttf') format('truetype');
+  font-family: 'roboto';
+  src: url('./assets/fonts/Roboto-Regular.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'roboto-bold';
-    src: url('./assets/fonts/Roboto-Bold.ttf') format('truetype');
+  font-family: 'roboto-bold';
+  src: url('./assets/fonts/Roboto-Bold.ttf') format('truetype');
 }
 
 
@@ -56,5 +55,12 @@ $OS2IoT-frontend-theme: mat-light-theme($OS2IoT-frontend-primary, $OS2IoT-fronte
 @import 'assets/scss/forms';
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
