--- a/src/app/profiles/profiles-list/profiles-list.component.html
+++ b/src/app/profiles/profiles-list/profiles-list.component.html
@@ -1,6 +1,8 @@
-<div class="row">
-    <app-top-bar [showSelectedSort]="false" [title]="'Profiles'"></app-top-bar>
-</div>
-<div class=" row">
-    <app-service-profiles-list></app-service-profiles-list>
+<div class="px-5 py-4">
+    <div class="row">
+        <app-top-bar [showSelectedSort]="false" [title]="'Profiles'"></app-top-bar>
+    </div>
+    <div class=" row">
+        <app-service-profiles-list></app-service-profiles-list>
+    </div>
 </div>
