--- a/src/app/my-applications/applications-table/applications-table-row/applications-table-row.component.html
+++ b/src/app/my-applications/applications-table/applications-table-row/applications-table-row.component.html
@@ -1,6 +1,5 @@
 <td class="position-relative">
-  <a [routerLink]="['application', application.id]" routerLinkActive="active"
-    class="application-link">{{application.name}}</a>
+  <a [routerLink]="[application.id]" routerLinkActive="active" class="application-link">{{application.name}}</a>
 </td>
 <ng-container *ngIf="application.iotDevices; else iotZero">
   <td class="position-relative">{{application.iotDevices.length}}</td>
@@ -17,7 +16,7 @@
     <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{application.id}}">
       <li><a (click)="clickDelete()" class="dropdown-item"
           [routerLink]="">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a></li>
-      <li><a class="dropdown-item" [routerLink]="['edit-application', application.id]"
+      <li><a class="dropdown-item" [routerLink]="[application.id, 'edit-application']"
           routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a></li>
     </ul>
   </div>
