--- a/src/app/views/datatarget/datatarget/datatarget.component.html
+++ b/src/app/views/datatarget/datatarget/datatarget.component.html
@@ -1,22 +1,35 @@
 <ng-container *ngIf="datatarget">
-    <app-top-bar-single [data]="datatarget" [backButton]="backButton" [buttons]="buttons"></app-top-bar-single>
-    <div class="px-5">
-      <div class="application-component">
-        <div class="col-12 mb-4 py-3 bottom-separator">
-          <div class="col-12 col-sm-4">
-            <h4>{{ 'DATATARGET.DESCRIPTION' | translate }}</h4>
+  <app-top-bar-single [data]="datatarget" [backButton]="backButton" [buttons]="buttons"></app-top-bar-single>
+  <div class="px-5">
+    <div class="application-component">
+      <div class="col-12 mb-4 py-3 bottom-separator">
+        <div class="col-12 py-4">
+          <div class="col-12 col-sm-12">
+            <h4>{{ 'DATATARGET.NAME' | translate }}</h4>
           </div>
           <div class="col-12 pt-2 col-sm-8">
             <p>{{datatarget.name}}</p>
           </div>
-          <div class="col-12 pt-2 col-sm-8">
-            <p>{{datatarget.name}}</p>
+        </div>
+        <div class="col-12 py-4">
+          <div class="col-12 col-sm-12">
+            <h4>{{ 'DATATARGET.URL' | translate }}</h4>
           </div>
           <div class="col-12 pt-2 col-sm-8">
             <p>{{datatarget.url}}</p>
           </div>
-          <div class="col-12 pt-2 col-sm-8">
+        </div>
+        <div class="col-12 py-4">
+          <div class="col-12 col-sm-12">
+            <h4>{{ 'DATATARGET.TIMEOUT' | translate }}</h4>
+          </div>
+          <div class="col-12 col-sm-12">
             <p>{{datatarget.timeout}}</p>
+          </div>
+        </div>
+        <div class="col-12 py-4">
+          <div class="col-12 col-sm-12">
+            <h4>{{ 'DATATARGET.TYPE' | translate }}</h4>
           </div>
           <div class="col-12 pt-2 col-sm-8">
             <p>{{datatarget.type}}</p>
@@ -24,4 +37,5 @@
         </div>
       </div>
     </div>
-  </ng-container>
+  </div>
+</ng-container>
