IOT-263 add to navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -30,6 +30,12 @@
 
         </a>
       </li>
+      <li class="nav-item py-2">
+        <a routerLink="/payload-decoder" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+          id="payload-decoder">
+          {{ 'NAV.PAYLOAD-DECODER' | translate }}
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
