IOT-264 add fields to device form

--- a/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.scss
+++ b/src/app/shared/form/form-body-iot-devices/form-body-iot-devices.component.scss
@@ -25,5 +25,8 @@
     @include media-breakpoint-up(md) {
       min-height: 150px;
     }
-  }
 }
+
+.mat-radio-button ~ .mat-radio-button {
+    margin-left: 16px;
+  }
