--- a/src/app/my-applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/my-applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <ng-container *ngIf="device.type == 'GENERIC_HTTP'">
+    <ng-container *ngIf="device.type">
         <div class="col-12 py-4">
             <div class="col-12 col-sm-4">
                 <h4>{{ 'IOTDEVICE.GENERIC_HTTP.APIKEY' | translate }}</h4>
